# jaxkd

./: .gitignore  .gitmodules  README.md  demo.ipynb  pyproject.toml  trial.py
.github/workflows/: tests.yml
jaxkd/: __init__.py  cukd.py  extras.py  tree.py
tests/: test_extras.py  test_tree.py
